--- a/index.html
+++ b/index.html
@@ -21,16 +21,22 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="product">
-            <td class="name">
-              <span>Ironhack Rubber Duck</span>
+          <tr>
+            <td>{{name}}</td>
+            <td>${{price}}</td>
+            <td>
+              <input
+                type="number"
+                value="0"
+                min="0"
+                placeholder="Quantity"
+                v-model="amount"
+              />
             </td>
-            <td class="price">$<span>25.00</span></td>
-            <td class="quantity">
-              <input type="number" value="0" min="0" placeholder="Quantity" />
-            </td>
-            <td class="subtotal">$<span>0</span></td>
-            <td class="action">
+
+            <td>${{total}}</td>
+
+            <td>
               <button class="btn btn-remove">Remove</button>
             </td>
           </tr>
@@ -53,7 +59,9 @@
         </tfoot>
       </table>
       <p class="calculate-total">
-        <button id="calculate" class="btn btn-success">Calculate Prices</button>
+        <button id="calculate" class="btn btn-success" @click="calculate">
+          Calculate Prices
+        </button>
       </p>
       <h2 id="total-value">Total: $<span>0</span></h2>
     </div>
