:sparkles: iteration 3 done!

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           Calculate Prices
         </button>
       </p>
-      <h2 id="total-value">Total: $<span>0</span></h2>
+      <h2 id="total-value">Total: ${{total}}</h2>
     </div>
     <script src="./js/index.js"></script>
   </body>
