--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           </tr>
         </thead>
         <tbody>
-          <tr v-for="item in items">
-            <td>{{item.name}}</td>
+          <tr v-for="item, index in items" :key="index">
+            <td>Ironhack {{item.name}}</td>
             <td>${{item.price}}</td>
             <td>
               <input
@@ -37,25 +37,38 @@
             <td>${{item.total}}</td>
 
             <td>
-              <button class="btn btn-remove">Remove</button>
+              <button class="btn btn-remove" @click="remove(index)">
+                Remove
+              </button>
             </td>
           </tr>
           <!-- Iteration 2: Add more products here -->
         </tbody>
         <tfoot>
-          <!-- <tr class="create-product">
-          <td>
-            <input type="text" placeholder="Product Name" />
-          </td>
-          <td>
-            <input type="number" min="0" value="0" placeholder="Product Price" />
-          </td>
-          <td></td>
-          <td></td>
-          <td>
-            <button id="create" class="btn">Create Product</button>
-          </td>
-        </tr> -->
+          <tr class="create-product">
+            <td>
+              <input
+                type="text"
+                v-model="newProductName"
+                placeholder="Product Name"
+              />
+            </td>
+            <td>
+              <input
+                type="number"
+                min="0"
+                v-model="newProductPrice"
+                placeholder="Product Price"
+              />
+            </td>
+            <td></td>
+            <td></td>
+            <td>
+              <button id="create" class="btn" @click="create">
+                Create Product
+              </button>
+            </td>
+          </tr>
         </tfoot>
       </table>
       <p class="calculate-total">
